# PA

./: .gitignore  CMakeLists.txt  LICENSE.txt  main.cpp  readme.md
DATA_FILES/: upc_fig1_starlight.csv
collision_config/: PbPb536.json  README.md  neutron_tagging.json
config_class/: PPbCollision8_16Config.cpp  PPbCollision8_16ProtonPositive.cpp
config_header/: BaseConfig.h  ConstantDatas.h  PPbCollision8_16Config.h  PbP1_26Config.h  PbPb536Config.h
include/: AliRootClusterEventManager.h  AliRootFOCALEventLooper.h  AliRootFOCALHClusterManager.h  AliRootHitsFITManager.h  AliRootHitsFOCALManager.h  AllInOne.h  BaseCSVManager.h  BaseConfig.h  BaseConverter2Root.h  BaseDataBaseReader.h  BaseDoubleParticalChannelManager.h  BaseDrawGraph.h  BaseDrawGraph2.h  BaseFilter.h  BaseManager.h  BaseMassAnalysis.h  BaseMomentumManage.h  BasePpb8_16Config.h  ConstantDatas.h  DataBaseManager.h  DoubleParticleReconstructManager.h  DrawTGraphErrorHelper.h  DrawTH1DHelper.h  DrawTH2DHelper.h  FiltedDrawGraph.h  HitsFOCManager.h  IterableBaseManager.h  JpsiParticleAnalysis.h  PPbCollision8_16ProtonPositive.h  ProbFilter.h  Utils.h
instance/: JpsiParticleAnalysis.cpp  MixEvents.cpp
instance_header/: MixEvents.h  README.md  UpcFig5JpsiAnd2S.h  UpcFig7JpsiPbP.h  UpcFig8PbPb.h
python_scripts/: footbook.ipynb
python_scripts/DataBaseManagerFolder/: PyDataBaseManager.py
scripts/: JpsiProperty.cpp  JpsiStarlightAnalysis100000.cpp  UpcFig8.cpp  changeDirerction.cpp  compare_coherent_incoherent.cpp  drawDsigmaDy.cpp  mixevent_muon.cpp  muonAnalysis.cpp  phi_kk.cpp  remove_bkg.cpp  sigma_wgmPb.cpp  sigma_wgmpb_2.cpp  sigma_wgmpb_3.cpp  sigma_wgmpb_all_in_one.cpp  storeData2SQL.cpp  test.cpp  testFile.cpp  upcFig5.cpp  upcFig7.cpp
scripts/focal/: phiKKReconstruct.cpp  test_data.cpp
scripts/tests/: draw_corrolation_v2pt.cpp  woodsaxon.cpp
src/: AliRootClusterEventManager.cpp  AliRootFOCALEventLooper.cpp  AliRootFOCALHClusterManager.cpp  AliRootHitsFITManager.cpp  AliRootHitsFOCALManager.cpp  AlirootHitsFOCALManager.cpp  BaseCSVManager.cpp  BaseDoubleParticalChannelManager.cpp  BaseDrawGraph.cpp  DataBaseManager.cpp  DoubleParticleReconstructManager.cpp  DrawTGraphErrorHelper.cpp  DrawTH2DHelper.cpp  HitsFOCManager.cpp  ProbFilter.cpp
